# BOMWeatherServer

./: BOMWeatherServer_file_list.json  LICENSE  README.md  requirements.txt  setup.cfg  setup.py
BOMWeatherServer/: bom_weather_monitor.py  bom_weather_server.py  main.py  periodic.py  urls.py  weather_pending.py
deployment/: build_deb_package.py  install_on_raspbian.py
deployment/deb_BOMWeatherServer/DEBIAN/: control  postinst  preinst  prerm
deployment/deb_BOMWeatherServer/etc/systemd/system/: BOMWeatherServer.service
deployment/raspbian_BOMWeatherServer/: BOMWeatherServer.service
