[metadata]
name = LocalTimeServer
version = attr: BOMWeatherServer.version.__version__
description = attr: BOMWeatherServer.version.__description__

[options]
packages = BOMWeatherServer
install_required = python_version >= "3.6"

[options.entry_points]
console_scripts = BOMWeatherServer = BOMWeatherServer.bom_weather_server:main
